methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:7: error: not found: value faireV
      faireV(Color.red);
      ^PatternPicture:8: error: not found: value faireV
      faireV(Color.blue);
      ^PatternPicture:9: error: not found: value faireV
      faireV(Color.green);
      ^PatternPicture:10: error: not found: value faireV
      faireV(Color.yellow);
      ^PatternPicture:3: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime55.PatternPicture'
override def run() {
             ^