methods.picture.PatternPicture.scala.code
override def run() {
}
override def run() {
  for (i <- 1 to 4) {
    for (j <-1 to 2) {

      faireV(Color.red);
      faireV(Color.blue);
      faireV(Color.green);
      faireV(Color.yellow);
      avance(5);
    }
    gauche();
    avance(5);
    droite();

  }}
def fairecarre(c: Color) {
  avance();
  baisseBrosse();
  setCouleurBrosse(c:Color)
  leveBrosse();
  gauche();
  avance();
  gauche();
  avance();
  baisseBrosse();
  gauche();
  leveBrosse();
  avance();
  gauche();
  avance();

}